Fixed category_list.html display on small screens

--- a/category_list.css
+++ b/category_list.css
@@ -39,7 +39,7 @@ header {
 }
 
 .coverImage img {
-  width: 500px;
+  width: 25vw;
   height: 500px;
   object-fit: cover;
   border-radius: 12px;
